- added tap device

--- a/vsock-proxy/Cargo.toml
+++ b/vsock-proxy/Cargo.toml
@@ -11,8 +11,11 @@ clap = "2.33"
 env_logger = "0.7"
 log = "0.4"
 dns-lookup = "1.0.1"
-nix = "0.15.0"
+nix = "*"
 vsock = "0.1.5"
 byteorder = "1.3"
 pcap = "*"
 tun = "*"
+threadpool = "1.7.1"
+netlink-sys = "0.6.0"
+netlink-packet-route = "0.7.0"
