--- a/vsock-proxy/Cargo.toml
+++ b/vsock-proxy/Cargo.toml
@@ -15,7 +15,7 @@ nix = "*"
 vsock = "0.1.5"
 byteorder = "1.3"
 pcap = "*"
-tun = "*"
+tun = {version = "*" ,features = ["mio"] }
 threadpool = "1.7.1"
 netlink-sys = "0.6.0"
 netlink-packet-route = "0.7.0"
