SALM-11 - Added PR check build

--- a/vsock-proxy/Cargo.toml
+++ b/vsock-proxy/Cargo.toml
@@ -11,7 +11,7 @@ clap = "2.33"
 env_logger = "0.7"
 log = "0.4"
 dns-lookup = "1.0.1"
-nix = "*"
+nix = "0.15.0"
 vsock = "0.1.5"
 byteorder = "1.3"
 pcap = "*"
