--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /vsock-proxy/target/
 /vsock-proxy/.idea
-/container-converter/target/
-/container-converter/.idea
+/tools/container-converter/target/
+/tools/container-converter/.idea
 Cargo.lock
+.idea
