--- a/tools/container-converter/Cargo.toml
+++ b/tools/container-converter/Cargo.toml
@@ -12,4 +12,4 @@ log = "0.4"
 clap = "2.33"
 shiplift = "0.7"
 futures = "0.3"
-async-std = "1.9.0"
+async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
