--- a/tools/container-converter/Cargo.toml
+++ b/tools/container-converter/Cargo.toml
@@ -13,3 +13,4 @@ clap = "2.33"
 shiplift = "0.7"
 futures = "0.3"
 async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
+tempfile = "3.2.0"
