--- a/docker/vsock-proxy/Dockerfile
+++ b/docker/vsock-proxy/Dockerfile
@@ -1,10 +1,20 @@
 FROM rust:1.53.0 as build
 RUN apt-get update && \
-    apt-get install -y libpcap-dev
-ADD vsock-proxy /opt/
-WORKDIR /opt/
-RUN cat Cargo.toml
-RUN cargo build
+    apt-get install -y libpcap-dev make
+
+ADD vsock-proxy /opt/salmiac/vsock-proxy
+ADD tools/container-converter /opt/salmiac/tools/container-converter
+
+WORKDIR /opt/salmiac
+
+RUN cd vsock-proxy && \
+    cat Cargo.toml && \
+    cargo build
+
+RUN cd tools/container-converter && \
+    cat Cargo.toml && \
+    cat Makefile && \
+    /usr/bin/make
 
 FROM ubuntu-networking
 
