--- a/tools/container-converter/src/resources/parent/Dockerfile
+++ b/tools/container-converter/src/resources/parent/Dockerfile
@@ -17,7 +17,7 @@ RUN apt-get update && apt-get install -y apt-utils \
      libssl-dev \
      pkg-config \
      musl-tools
-     
+
 # Install rust toolchain and its dependencies
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
 ENV PATH="/root/.cargo/bin:${PATH}"
@@ -30,19 +30,32 @@ RUN rustup default ${RUST_VERSION}-x86_64-unknown-linux-gnu
 RUN rustup target add --toolchain ${RUST_VERSION} x86_64-unknown-linux-musl
 
 # Install nitro-cli
-ENV NITRO_CLI_INSTALL_DIR=/
+ENV NITRO_CLI_INSTALL_DIR=./install
 RUN git clone https://github.com/aws/aws-nitro-enclaves-cli.git && \
     cd aws-nitro-enclaves-cli && \
     make nitro-cli-native && make vsock-proxy-native && make install
-    
+
+# Resulting image
 FROM ubuntu as parent-base
 
-COPY --from=nitro-cli /etc/nitro_enclaves /etc/nitro_enclaves
-COPY --from=nitro-cli /etc/profile.d /etc/profile.d
-COPY --from=nitro-cli /lib/modules /lib/modules
-COPY --from=nitro-cli /usr/bin /usr/bin
-COPY --from=nitro-cli /usr/lib /usr/lib
-COPY --from=nitro-cli /usr/share /usr/share
+# Minimum amount of utilities to run networking and nitro-cli
+RUN apt-get update && apt-get install -y net-tools \
+     iproute2 \
+     curl  \
+     iptables \
+     jq \
+     libpcap-dev \
+     sudo \
+     kmod \
+     systemctl
+
+# Copy nitro-cli files
+COPY --from=nitro-cli aws-nitro-enclaves-cli/install/etc/nitro_enclaves /etc/nitro_enclaves
+COPY --from=nitro-cli aws-nitro-enclaves-cli/install/etc/profile.d /etc/profile.d
+COPY --from=nitro-cli aws-nitro-enclaves-cli/install/lib/modules /lib/modules
+COPY --from=nitro-cli aws-nitro-enclaves-cli/install/usr/bin /usr/bin
+COPY --from=nitro-cli aws-nitro-enclaves-cli/install/usr/lib/systemd/system /usr/lib/systemd/system
+COPY --from=nitro-cli aws-nitro-enclaves-cli/install/usr/share /usr/share
 
 # Setup the env for nitro-cli
 RUN mkdir -p /var/log/nitro_enclaves
