- reformat of dev image

--- a/docker/ubuntu-networking/Dockerfile
+++ b/docker/ubuntu-networking/Dockerfile
@@ -1,3 +1,13 @@
-FROM ubuntu
-RUN apt-get update && \
- apt-get install -y net-tools iproute2 netcat dnsutils curl iputils-ping iptables nmap tcpdump uml-utilities
+# This is a minimum development image that can run networking inside an enclave.
+
+FROM ubuntu as ubuntu-networking
+RUN apt-get update && apt-get install -y net-tools \
+    iproute2 \
+    netcat \
+    dnsutils \
+    curl \
+    iputils-ping \
+    iptables \
+    nmap \
+    tcpdump \
+    uml-utilities
