- code review changes

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -1,5 +1,15 @@
 FROM fnndsc/ubuntu-python3
-RUN apt-get update && \
- apt-get install -y net-tools iproute2 netcat dnsutils curl iputils-ping iptables nmap tcpdump uml-utilities libpcap-dev
+RUN apt-get update && apt-get install -y curl \
+    dnsutils \
+    iproute2 \
+    iptables \
+    iputils-ping \
+    libpcap-dev \
+    net-tools \
+    netcat \
+    nmap \
+    tcpdump \
+    uml-utilities
+
 COPY index.html web-server.py ./
 CMD ./web-server.py
