--- a/vsock-proxy/Cargo.toml
+++ b/vsock-proxy/Cargo.toml
@@ -10,7 +10,6 @@ edition = "2018"
 clap = "2.33"
 env_logger = "0.7"
 log = "0.4"
-dns-lookup = "1.0.1"
 nix = "0.15.0"
 vsock = "0.1.5"
 byteorder = "1.3"
@@ -20,3 +19,6 @@ threadpool = "1.7.1"
 rtnetlink = "0.8.0"
 pnet_datalink = "0.28.0"
 tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread"] }
+futures = "0.3"
+bincode = "1.3.3"
+serde = { version = "1.0.127", features = ["derive"] }
