--- a/vsock-proxy/Cargo.toml
+++ b/vsock-proxy/Cargo.toml
@@ -13,8 +13,8 @@ log = "0.4"
 nix = "0.15.0"
 vsock = "0.1.5"
 byteorder = "1.3"
-pcap = "*"
-tun = {version = "*" ,features = ["mio"] }
+pcap = "0.8.1"
+tun = {version = "0.5.1" ,features = ["mio"] }
 threadpool = "1.7.1"
 rtnetlink = "0.8.0"
 pnet_datalink = "0.28.0"
