--- a/vsock-proxy/Cargo.toml
+++ b/vsock-proxy/Cargo.toml
@@ -22,3 +22,4 @@ tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread"] }
 futures = "0.3"
 bincode = "1.3.3"
 serde = { version = "1.0.127", features = ["derive"] }
+interfaces = "0.0.7"
