--- a/vsock-proxy/Cargo.toml
+++ b/vsock-proxy/Cargo.toml
@@ -20,6 +20,6 @@ rtnetlink = "0.8.0"
 pnet_datalink = "0.28.0"
 tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread"] }
 futures = "0.3"
-bincode = "1.3.3"
 serde = { version = "1.0.127", features = ["derive"] }
 interfaces = "0.0.7"
+serde_cbor = "0.11.2"
