--- a/vsock-proxy/Cargo.toml
+++ b/vsock-proxy/Cargo.toml
@@ -17,9 +17,8 @@ pcap = "0.8.1"
 tun = {version = "0.5.1" ,features = ["mio"] }
 threadpool = "1.7.1"
 rtnetlink = "0.8.0"
-pnet_datalink = "0.28.0"
 tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread"] }
 futures = "0.3"
 serde = { version = "1.0.127", features = ["derive"] }
-interfaces = "0.0.7"
 serde_cbor = "0.11.2"
+ipnetwork = { version = "0.18.0", features = ["serde"] }
