--- a/vsock-proxy/enclave/Cargo.toml
+++ b/vsock-proxy/enclave/Cargo.toml
@@ -13,6 +13,9 @@ env_logger = "0.7"
 log = "0.4"
 nix = "0.15.0"
 vsock = "0.1.5"
-tun = {version = "0.5.1" ,features = ["mio"] }
+futures = "0.3"
+#tun = {version = "0.5.1" ,features = ["mio", "async"] }
 threadpool = "1.7.1"
 tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread"] }
+tokio-vsock = "0.3.1"
+tokio-tun = "0.3.15"
