--- a/vsock-proxy/parent/Cargo.toml
+++ b/vsock-proxy/parent/Cargo.toml
@@ -18,3 +18,5 @@ threadpool = "1.7.1"
 rtnetlink = "0.8.0"
 tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread"] }
 ipnetwork = { version = "0.18.0", features = ["serde"] }
+tokio-tun = "0.3.15"
+tokio-vsock = "0.3.1"
