--- a/vsock-proxy/enclave/Cargo.toml
+++ b/vsock-proxy/enclave/Cargo.toml
@@ -14,8 +14,6 @@ log = "0.4"
 nix = "0.15.0"
 vsock = "0.1.5"
 futures = "0.3"
-#tun = {version = "0.5.1" ,features = ["mio", "async"] }
-threadpool = "1.7.1"
-tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread"] }
+tun = {version = "0.5.3" ,features = ["async"] }
+tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread", "io-util"] }
 tokio-vsock = "0.3.1"
-tokio-tun = "0.3.15"
