--- a/tools/container-converter/Cargo.toml
+++ b/tools/container-converter/Cargo.toml
@@ -14,3 +14,5 @@ shiplift = { git = "https://github.com/charlolizard/shiplift" }
 futures = "0.3"
 tokio = { version = "1.0.1", features = ["macros", "rt"] }
 tempfile = "3.2.0"
+toml = "0.5.8"
+serde = { version = "1.0.127", features = ["derive"] }
