--- a/tools/container-converter/app/Cargo.toml
+++ b/tools/container-converter/app/Cargo.toml
@@ -14,6 +14,7 @@ shiplift = { git = "https://github.com/charlolizard/shiplift" }
 futures = "0.3"
 tokio = { version = "1.0.1", features = ["macros", "rt"] }
 tempfile = "3.2.0"
+serde = { version = "1.0.127", features = ["derive"] }
 
 [[bin]]
 name = "container-converter"
