--- a/tools/container-converter/web-api/Cargo.toml
+++ b/tools/container-converter/web-api/Cargo.toml
@@ -9,3 +9,10 @@ edition = "2018"
 [dependencies]
 app = { path = "../app" }
 iron = "0.6.1"
+router = "0.6.0"
+bodyparser = "0.8.0"
+clap = "2.33"
+env_logger = "0.7"
+log = "0.4"
+serde = { version = "1.0.127", features = ["derive"] }
+tokio = { version = "1.0.1", features = ["macros", "rt"] }
