--- a/vsock-proxy/enclave/Cargo.toml
+++ b/vsock-proxy/enclave/Cargo.toml
@@ -16,3 +16,5 @@ futures = "0.3"
 tun = {version = "0.5.3" ,features = ["async"] }
 tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread", "io-util"] }
 tokio-vsock = "0.3.1"
+em-app = { git = "https://github.com/fortanix/rust-sgx", branch = "acruceru/em-app-update", features = ["nitro"] }
+mbedtls = "0.8.1"
