--- a/tools/container-converter/Cargo.toml
+++ b/tools/container-converter/Cargo.toml
@@ -16,3 +16,4 @@ tokio = { version = "1.0.1", features = ["macros", "rt"] }
 tempfile = "3.2.0"
 toml = "0.5.8"
 serde = { version = "1.0.127", features = ["derive"] }
+docker-image-reference = "0.1.0"
