--- a/tools/container-converter/Cargo.toml
+++ b/tools/container-converter/Cargo.toml
@@ -14,3 +14,5 @@ shiplift = "0.7"
 futures = "0.3"
 async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
 tempfile = "3.2.0"
+serde_json = "1.0.68"
+enclave = { path = "../../vsock-proxy/enclave" }
