--- a/container-converter-service/server/Cargo.toml
+++ b/container-converter-service/server/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+webservice = { git = "ssh://git@bitbucket.org/fortanix/roche.git" }
+senclave = { git = "ssh://git@bitbucket.org/fortanix/roche/common/senclave", features = ["attestation_insecure"]  }
+
