--- a/container-converter-service/server/Cargo.toml
+++ b/container-converter-service/server/Cargo.toml
@@ -8,5 +8,10 @@ edition = "2018"
 
 [dependencies]
 webservice = { git = "ssh://git@bitbucket.org/fortanix/roche.git" }
-senclave = { git = "ssh://git@bitbucket.org/fortanix/roche/common/senclave", features = ["attestation_insecure"]  }
-
+senclave = { git = "ssh://git@bitbucket.org/fortanix/roche.git", features = ["attestation_insecure"]  }
+database = { git = "ssh://git@bitbucket.org/fortanix/roche.git"  }
+container-converter = { path = "../../tools/container-converter" }
+iron =  "0.6.1"
+env_logger = "0.7"
+log = "0.4"
+once_cell = "1.3.1"
