--- a/container-converter-service/api-model/Cargo.toml
+++ b/container-converter-service/api-model/Cargo.toml
@@ -11,3 +11,4 @@ model_types = { git = "ssh://git@bitbucket.org/fortanix/roche.git" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { git = "ssh://git@bitbucket.org/fortanix/serde-json.git", branch = "base64_bytes" }
 webservice-api-model = { git = "ssh://git@bitbucket.org/fortanix/roche.git" }
+rustc-serialize = "0.3"
