--- a/container-converter-service/client/Cargo.toml
+++ b/container-converter-service/client/Cargo.toml
@@ -20,6 +20,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 strum_macros = "0.19"
 uuid = { version = "0.6.3", features = ["v4", "serde"] }
+api-model = { path = "../api-model", package = "nitro-enclaves-converter-api-model" }
 
 [build-dependencies]
 client_generator_base = {  git = "ssh://git@bitbucket.org/fortanix/roche.git"  }
