--- a/vsock-proxy/enclave/Cargo.toml
+++ b/vsock-proxy/enclave/Cargo.toml
@@ -22,3 +22,4 @@ serde_json = "1.0.68"
 serde = { version = "1.0.127", features = ["derive"] }
 nsm-lib = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api", branch = "main" }
 nsm-io = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api", branch = "main" }
+api-model = { path = "../../container-converter-service/api-model", package = "nitro-enclaves-converter-api-model" }
