--- a/tools/container-converter/Cargo.toml
+++ b/tools/container-converter/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2018"
 env_logger = "0.7"
 log = "0.4"
 clap = "2.33"
-shiplift = { git = "https://github.com/charlolizard/shiplift" }
+shiplift = { git = "https://github.com/charlolizard/shiplift", branch = "no-gzip-on-build" }
 futures = "0.3"
 tokio = { version = "1.0.1", features = ["macros", "rt"] }
 tempfile = "3.2.0"
