Salmiac CI and Jenkinsfile scripts

--- a/docker/vsock-proxy/Dockerfile
+++ b/docker/vsock-proxy/Dockerfile
@@ -8,7 +8,7 @@ ADD build-solution.sh /opt/salmiac/
 
 WORKDIR /opt/salmiac
 
-ARG RELEASE=debug
+ARG RELEASE=--debug
 RUN bash -x ./build-solution.sh $RELEASE
 
 FROM ubuntu-networking
