--- a/vsock-proxy/enclave/Cargo.toml
+++ b/vsock-proxy/enclave/Cargo.toml
@@ -21,6 +21,12 @@ em-app = { git = "https://github.com/fortanix/rust-sgx", branch = "acruceru/em-a
 mbedtls = "0.8.1"
 serde_json = "1.0.68"
 serde = { version = "1.0.127", features = ["derive"] }
+serde_cbor = "0.11.2"
 nsm-lib = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api", branch = "main" }
 nsm-io = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api", branch = "main" }
 api-model = { path = "../../container-converter-service/api-model", package = "nitro-enclaves-converter-api-model" }
+
+[build-dependencies]
+pkix = { path = "../../../common/pkix" }
+serde_cbor = "0.11.2"
+mbedtls = { version = "0.8.1", features = [ "rdrand", "std" ], default-features = false }
