--- a/vsock-proxy/enclave/Cargo.toml
+++ b/vsock-proxy/enclave/Cargo.toml
@@ -18,7 +18,7 @@ futures = "0.3"
 tun = {version = "0.5.3" ,features = ["async"] }
 tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread", "io-util", "time"] }
 tokio-vsock = "0.3.1"
-em-app = { git = "https://github.com/fortanix/rust-sgx", branch = "acruceru/em-app-update", features = ["nitro"] }
+em-app = { git = "https://github.com/fortanix/rust-sgx"}
 mbedtls = "0.8.1"
 serde_json = "1.0.68"
 serde = { version = "1.0.127", features = ["derive"] }
@@ -26,10 +26,9 @@ serde_cbor = "0.11.2"
 nsm-lib = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api", branch = "main" }
 nsm-io = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api", branch = "main" }
 api-model = { path = "../../container-converter-service/api-model", package = "nitro-enclaves-converter-api-model" }
-sdkms = { git = "https://github.com/fortanix/sdkms-client-rust.git", branch = "uuid-compat", default-features = false }
-em-client = { git = "https://github.com/fortanix/em-client-rust", branch = "acruceru/api-update", default-features = false, features = ["client"] }
+sdkms = { version = "0.2.1", default-features = false }
 
 [build-dependencies]
-pkix = { path = "../../../common/pkix" }
+pkix = "0.1.2"
 serde_cbor = "0.11.2"
 mbedtls = { version = "0.8.1", features = [ "rdrand", "std" ], default-features = false }
