--- a/vsock-proxy/parent/Cargo.toml
+++ b/vsock-proxy/parent/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-etherparse = { git = "https://github.com/charlolizard/etherparse", branch = "udp_checksum_from_slice" }
+etherparse = { git = "https://github.com/fortanix/etherparse", branch = "udp_checksum_from_slice" }
 shared = { path = "../shared" }
 clap = "2.33"
 env_logger = "0.7"
