--- a/vsock-proxy/enclave/Cargo.toml
+++ b/vsock-proxy/enclave/Cargo.toml
@@ -15,6 +15,7 @@ env_logger = "0.7"
 log = "0.4"
 nix = "0.15.0"
 futures = "0.3"
+rtnetlink = "0.8.0"
 tun = {version = "0.5.3" ,features = ["async"] }
 tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread", "io-util", "time"] }
 tokio-vsock = "0.3.1"
