--- a/vsock-proxy/enclave/Cargo.toml
+++ b/vsock-proxy/enclave/Cargo.toml
@@ -28,6 +28,7 @@ nsm-lib = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api", branch = 
 nsm-io = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api", branch = "main" }
 api-model = { path = "../../container-converter-service/api-model", package = "nitro-enclaves-converter-api-model" }
 sdkms = { version = "0.2.1", default-features = false }
+ipnetwork = { version = "0.18.0", features = ["serde"] }
 
 [build-dependencies]
 pkix = "0.1.2"
