--- a/vsock-proxy/parent/Cargo.toml
+++ b/vsock-proxy/parent/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-process = "1.2.0"
 etherparse = { git = "https://github.com/fortanix/etherparse", branch = "udp_checksum_from_slice" }
 shared = { path = "../shared" }
 clap = "2.33"
@@ -20,4 +21,5 @@ ipnetwork = { version = "0.18.0", features = ["serde"] }
 tokio-vsock = "0.3.1"
 futures = "0.3"
 pcap-async = "0.4.1"
+tun = {version = "0.5.3" ,features = ["async"] }
 em-app = { git = "https://github.com/fortanix/rust-sgx" }
