--- a/vsock-proxy/shared/Cargo.toml
+++ b/vsock-proxy/shared/Cargo.toml
@@ -14,6 +14,7 @@ tun = {version = "0.5.3" ,features = ["async"] }
 threadpool = "1.7.1"
 rtnetlink = "0.8.0"
 tokio = { version = "1.0.1", features = ["macros", "rt", "rt-multi-thread", "io-util", "net"] }
+tokio-vsock = "0.3.1"
 futures = "0.3"
 serde = { version = "1.0.127", features = ["derive"] }
 serde_cbor = "0.11.2"
