--- a/tools/container-converter/Cargo.toml
+++ b/tools/container-converter/Cargo.toml
@@ -12,6 +12,7 @@ log = "0.4"
 clap = "2.33"
 shiplift = { git = "https://github.com/charlolizard/shiplift", branch = "no-gzip-on-build" }
 futures = "0.3"
+tar = "0.4"
 tokio = { version = "1.0.1", features = ["macros", "rt"] }
 tempfile = "3.2.0"
 toml = "0.5.8"
