--- a/vsock-proxy/parent/Cargo.toml
+++ b/vsock-proxy/parent/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-process = "1.2.0"
 etherparse = { git = "https://github.com/fortanix/etherparse", branch = "udp_checksum_from_slice" }
 shared = { path = "../shared" }
 clap = "2.33"
