--- a/tools/container-converter/Cargo.toml
+++ b/tools/container-converter/Cargo.toml
@@ -22,3 +22,6 @@ docker-image-reference = "0.1.0"
 serde_json = "1.0.68"
 api-model = { path = "../../container-converter-service/api-model", package = "nitro-enclaves-converter-api-model" }
 model_types = { path = "../../../model/model_types" }
+
+[features]
+file-system = []
