--- a/vsock-proxy/enclave/Cargo.toml
+++ b/vsock-proxy/enclave/Cargo.toml
@@ -34,3 +34,6 @@ ipnetwork = { version = "0.18.0", features = ["serde"] }
 pkix = "0.1.2"
 serde_cbor = "0.11.2"
 mbedtls = { version = "0.8.1", features = [ "rdrand", "std" ], default-features = false }
+
+[features]
+file-system = []
