--- a/tools/container-converter/Cargo.toml
+++ b/tools/container-converter/Cargo.toml
@@ -23,3 +23,6 @@ docker-image-reference = "0.1.0"
 serde_json = "1.0.68"
 api-model = { path = "../../container-converter-service/api-model", package = "nitro-enclaves-converter-api-model" }
 model_types = { path = "../../../model/model_types" }
+
+[dev-dependencies]
+chrono = "0.4.22"
