--- a/tools/container-converter/Cargo.toml
+++ b/tools/container-converter/Cargo.toml
@@ -25,6 +25,7 @@ serde_json = "1.0.68"
 api-model = { path = "../../container-converter-service/api-model", package = "nitro-enclaves-converter-api-model" }
 model_types = { path = "../../../model/model_types" }
 rand = "0.8.4"
+http = "0.2.8"
 
 [dev-dependencies]
 chrono = "0.4.22"
