--- a/vsock-proxy/parent/Cargo.toml
+++ b/vsock-proxy/parent/Cargo.toml
@@ -23,3 +23,4 @@ futures = "0.3"
 pcap-async = "0.4.1"
 tun = {version = "0.5.3" ,features = ["async"] }
 em-app = { git = "https://github.com/fortanix/rust-sgx.git" }
+model_types = { path = "../../../model/model_types" }
