--- a/tools/container-converter/Cargo.toml
+++ b/tools/container-converter/Cargo.toml
@@ -13,7 +13,7 @@ env_logger = "0.7"
 exitcode = "1.1.2"
 log = "0.4"
 clap = "2.33"
-shiplift = { git = "https://github.com/fortanix/shiplift.git", branch = "master" }
+shiplift = { git = "https://github.com/fortanix/shiplift.git" }
 futures = "0.3"
 tar = { git = "https://github.com/alexcrichton/tar-rs" }
 tokio = { version = "1.0.1", features = ["macros", "rt"] }
