Better error messages from Salmiac unit tests. SALM-421.
The CI script for Salmiac runs some DSM connection unit
tests. These require the environment variable FORTANIX_API_KEY
to be set. Provide better error messages from both the shell
script and the test itself if FORTANIX_API_KEY isn't set.

Also, clean up some code duplication in the unit tests
for dsm_key_config.

--- a/vsock-proxy/enclave/Cargo.toml
+++ b/vsock-proxy/enclave/Cargo.toml
@@ -34,3 +34,6 @@ rand = "0.8.5"
 pkix = "0.1.2"
 serde_cbor = "0.11.2"
 mbedtls = { version = "0.8.1", features = [ "rdrand", "std" ], default-features = false }
+
+[dev-dependencies]
+lazy_static = "1.0"
