ZIRC-5792: Implementing the make file infrastructure to run and build the test container from the shared test directory

--- a/make/Makefile.defs
+++ b/make/Makefile.defs
@@ -1,5 +1,6 @@
 #
 # String definitions for makefiles.
+# TODO: Not all of these are needed. We should remove the unnecessary ones later.
 #
 
 APPCONFIG_ENV_KEY := APPCONFIG_ID
