ZIRC-5798: Removing zircon as a submodule from Salmiac and adding the shared app-test-infra module as a submodule to share the test infrastructure and the application test scripts

--- a/make/Makefile.defs
+++ b/make/Makefile.defs
@@ -1,6 +1,7 @@
 #
 # String definitions for makefiles.
-# TODO: Not all of these are needed. We should remove the unnecessary ones later.
+# TODO: Not all of these are needed. We should remove the unnecessary ones later. Also check
+# salmiac/strings/generated_string_table.py
 #
 
 APPCONFIG_ENV_KEY := APPCONFIG_ID
