--- a/test/tests-container-salmiac/Dockerfile-salmiac-ub20
+++ b/test/tests-container-salmiac/Dockerfile-salmiac-ub20
@@ -4,11 +4,14 @@ ARG PLATFORM
 ARG FLAVOR
 ARG DOCKER_REGISTRY
 
+ARG DEBIAN_FRONTEND=noninteractive
 RUN apt-get update \
     && apt-get upgrade -y \
-    && DEBIAN_FRONTEND=noninteractive apt-get install -y \
+    && apt-get install -y \
+       build-essential \
        cryptsetup-bin \
        curl \
+       default-libmysqlclient-dev \
        git \
        libffi-dev \
        libmbedtls12 \
@@ -16,6 +19,7 @@ RUN apt-get update \
        libnuma-dev \
        musl \
        openssl \
+       pkg-config \
        python3 \
        python3-dev \
        python3-pandas \
