--- a/docker/ubuntu-networking/Dockerfile
+++ b/docker/ubuntu-networking/Dockerfile
@@ -1,7 +1,8 @@
 # This is a minimum development image that can run networking inside an enclave.
 
 FROM ubuntu as ubuntu-networking
-RUN apt-get update && apt-get install -y net-tools \
+RUN apt-get update && apt-get upgrade -y && \
+    apt-get install -y net-tools \
     iproute2 \
     netcat \
     dnsutils \
