--- a/vsock-proxy/parent/Cargo.toml
+++ b/vsock-proxy/parent/Cargo.toml
@@ -22,5 +22,5 @@ tokio-vsock = "0.3.1"
 futures = "0.3"
 pcap-async = "0.4.1"
 tun = {version = "0.5.3" ,features = ["async"] }
-em-app = { git = "https://github.com/fortanix/rust-sgx.git" }
+em-app = { version = "0.4" }
 model_types = { path = "../../../model/model_types" }
