--- a/.github/workflows/entry-point.yml
+++ b/.github/workflows/entry-point.yml
@@ -1,4 +1,4 @@
-name: Entry point workflow, which runs on every PR
+name: Entry point workflow. Runs on every submitted PR
 
 on:
   push:
@@ -10,7 +10,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  checkout:
+  build:
 
     runs-on: ubuntu-20.04
 
@@ -25,6 +25,6 @@ jobs:
           token: ${{ secrets.PAT }}
           path: tools/app-test-infra
 
-  call-build-solution:
     uses: ./.github/workflows/build-solution.yml
     secrets: inherit
+  
