--- a/.github/workflows/build-solution.yml
+++ b/.github/workflows/build-solution.yml
@@ -47,10 +47,9 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v2.0.1
 
       - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@master
+        uses: dtolnay/rust-toolchain@stable
         with:
           targets: x86_64-unknown-linux-musl
-          toolchain: 1.71.0-nightly
 
       - name: Setup SSH
         run: |
