--- a/.github/workflows/build-solution.yml
+++ b/.github/workflows/build-solution.yml
@@ -1,6 +1,18 @@
 name: Build Solution
 
 on:
+  workflow_call:
+    secrets:
+      AWS_ACCESS_KEY_ID:
+        required: true
+      AWS_SECRET_ACCESS_KEY:
+        required: true
+      EC2_PRIVATE_SSH_KEY:
+        required: true
+      FORTANIX_API_KEY:
+        required: true
+      OVERLAYFS_UNIT_TEST_API_KEY:
+        required: true
   push:
     branches: [ "master" ]
   pull_request:
@@ -35,9 +47,10 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v2.0.1
 
       - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@master
         with:
           targets: x86_64-unknown-linux-musl
+          toolchain: nightly
 
       - name: Setup SSH
         run: |
