- pull self by name

--- a/.github/workflows/build-solution.yml
+++ b/.github/workflows/build-solution.yml
@@ -29,6 +29,8 @@ jobs:
     steps:
       - name: Pull main repository
         uses: actions/checkout@v3
+        with:
+          repository: fortanix/salmiac
 
       - name: Pull submodules
         uses: actions/checkout@v3
