--- a/.github/workflows/build-solution.yml
+++ b/.github/workflows/build-solution.yml
@@ -13,6 +13,8 @@ on:
         required: true
       OVERLAYFS_UNIT_TEST_API_KEY:
         required: true
+      PAT:
+        required: true
   push:
     branches: [ "master" ]
   pull_request:
@@ -35,7 +37,8 @@ jobs:
       - name: Pull submodules
         uses: actions/checkout@v3
         with:
-          repository: fortanix/app-test-infra
+          repository: fortanix/app-test-infra-test
+          token: ${{ secrets.PAT }}
           path: tools/app-test-infra
 
       - name: Configure AWS credentials
