--- a/.github/workflows/build-solution.yml
+++ b/.github/workflows/build-solution.yml
@@ -81,7 +81,7 @@ jobs:
 
       - name: Build Rust code
         run: |
-          ./build-solution.sh
+          ./build-converter.sh
 
       - name: Run Rust unit tests
         env:
