--- a/.github/workflows/build-solution.yml
+++ b/.github/workflows/build-solution.yml
@@ -50,6 +50,12 @@ jobs:
       - name: Login into ECR
         uses: aws-actions/amazon-ecr-login@v2.0.1
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKER_USERNAME }}
+
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@master
         with:
