--- a/.github/workflows/build-solution.yml
+++ b/.github/workflows/build-solution.yml
@@ -53,8 +53,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_PASSWORD }}
-          password: ${{ secrets.DOCKER_USERNAME }}
+          username: ${{ secrets.DOCKER_PASSWORD1 }}
+          password: ${{ secrets.DOCKER_USERNAME1 }}
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@master
