--- a/.github/workflows/build-solution.yml
+++ b/.github/workflows/build-solution.yml
@@ -51,10 +51,10 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v2.0.1
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_PASSWORD1 }}
-          password: ${{ secrets.DOCKER_USERNAME1 }}
+          username: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKER_PAT }}
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@master
