--- a/.github/workflows/build-solution.yml
+++ b/.github/workflows/build-solution.yml
@@ -15,10 +15,9 @@ on:
         required: true
       PAT:
         required: true
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+  on:
+    pull_request_review:
+      types: [ submitted, edited ]
 
 env:
   CARGO_TERM_COLOR: always
@@ -27,7 +26,7 @@ jobs:
   build:
 
     runs-on: ubuntu-20.04
-
+    if: github.event_name == 'pull_request' && github.event.review.state == 'approved'
     steps:
       - name: Pull main repository
         uses: actions/checkout@v3
