--- a/.github/workflows/build-solution.yml
+++ b/.github/workflows/build-solution.yml
@@ -65,7 +65,9 @@ jobs:
 
       - name: Install build dependencies
         run: |
-          sudo add-apt-repository universe
+          sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu focal-updates main universe"
+          sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu focal-security main universe"
+
           sudo apt-get update
           sudo apt-get install -y libpcap-dev amazon-ecr-credential-helper docker-credential-ecr-login
 
