- changed paths to public parent and enclave images

--- a/test/tests-container-salmiac/Dockerfile-salmiac-ub20
+++ b/test/tests-container-salmiac/Dockerfile-salmiac-ub20
@@ -1,4 +1,4 @@
-FROM 513076507034.dkr.ecr.us-west-1.amazonaws.com/development-images/nitro-parent-base:1.1.4 as nitro-cli
+FROM fortanix/nitro-parent-base:1.1.4 as nitro-cli
 
 ARG PLATFORM
 ARG FLAVOR
