- code review changes

--- a/.github/workflows/build-solution.yml
+++ b/.github/workflows/build-solution.yml
@@ -68,8 +68,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libpcap-dev amazon-ecr-credential-helper
 
-          # Setup docker-credential-ecr-login
-          sudo mv /usr/bin/docker-credential-ecr-login /usr/local/bin/
+      - name: Install docker-credential-ecr-login
+        run: |
+          # Download the latest release of docker-credential-ecr-login
+          aws s3 cp s3://fortanix-internal-artifact-repository/other-packages/docker-credential-ecr-login .
 
       - name: Build Rust code
         run: |
