Revert "- code review changes"
This reverts commit 85c3edea9f77f09c96b4d009395f1b1e7d9e3f1f.

--- a/.github/workflows/build-solution.yml
+++ b/.github/workflows/build-solution.yml
@@ -75,6 +75,9 @@ jobs:
           # Make it executable
           chmod +x docker-credential-ecr-login
 
+          # Move it to a directory in the PATH
+          sudo mv docker-credential-ecr-login /usr/local/bin/
+
       - name: Build Rust code
         run: |
           ./build-converter.sh
