--- a/api-model/Cargo.toml
+++ b/api-model/Cargo.toml
@@ -13,4 +13,4 @@ serde = { version = "1.0", features = ["derive"], optional = true }
 serde_json = "1.0"
 
 [patch.crates-io]
-serde_json = { git = "https://github.com/fortanix/serde-json.git", branch = "base64_bytes" }
+serde_json = { git = "https://github.com/fortanix/serde-json.git", branch = "base64_bytes_1.0.51" }
