--- a/tools/container-converter/Cargo.toml
+++ b/tools/container-converter/Cargo.toml
@@ -5,7 +5,6 @@ authors = ["Fortanix, Inc."]
 edition = "2018"
 license = "MPL-2.0"
 repository = "https://github.com/fortanix/salmiac"
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -18,8 +17,10 @@ env_logger = "0.7"
 exitcode = "1.1.2"
 futures = "0.3"
 http = "0.2.8"
+lazy_static = "1.4.0"
 log = "0.4"
 nix = { version = "0.26.1", features = ["user", "fs"] }
+openssl = { version = "0.10", features = ["vendored"] }
 rand = "0.8.4"
 serde = { version = "1.0.127", features = ["derive"] }
 serde_json =  { git = "https://github.com/fortanix/serde-json.git", branch = "base64_bytes" }
@@ -30,7 +31,6 @@ tempfile = "3.2.0"
 tokio = { version = "1.0.1", features = ["macros", "rt"] }
 toml = "0.5.8"
 url = "2.2.2"
-lazy_static = "1.4.0"
 
 [dev-dependencies]
 chrono = "0.4.22"
