Update converter image to ubuntu 24

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,25 +1,21 @@
-FROM 513076507034.dkr.ecr.us-west-1.amazonaws.com/nitro-parent-base:1.1.3 as nitro-cli
+FROM fortanix/parent-base:1.2.0 as nitro-cli
 
-FROM ubuntu:20.04
+FROM ubuntu:24.04
 
 ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && \
     apt-get install -y \
     cryptsetup-bin \
-    libssl1.1 \
     sudo
-
-COPY --from=nitro-cli /usr/bin/nitro-cli /usr/bin/
-COPY --from=nitro-cli /usr/share/nitro_enclaves/ /usr/share/
 
 # Copy nitro-cli files
 COPY --from=nitro-cli /etc/nitro_enclaves /etc/nitro_enclaves
-COPY --from=nitro-cli /etc/profile.d /etc/profile.d
-COPY --from=nitro-cli /lib/modules /lib/modules
 COPY --from=nitro-cli /usr/bin/nitro-cli /usr/bin
 COPY --from=nitro-cli /usr/bin/nitro-enclaves-allocator /usr/bin
 COPY --from=nitro-cli /usr/share/nitro_enclaves /usr/share/nitro_enclaves
+COPY --from=nitro-cli /usr/bin/nitro-cli /usr/bin/
+COPY --from=nitro-cli /usr/share/nitro_enclaves/ /usr/share/
 
 RUN mkdir -p /var/log/nitro_enclaves
 
